improved MANIFEST.in

--- a/.editorconfig
+++ b/.editorconfig
@@ -22,3 +22,6 @@ insert_final_newline = ignore
 [*.hjson]
 indent_size = 2
 insert_final_newline = ignore
+
+[MANIFEST.in]
+insert_final_newline = ignore
