--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,3 @@
-
-include locale/commands/*
-include locale/configs/*
-include locale/helpers/*
-include locale/middlewares/*
-include locale/providers/*
-include locale/resources/*
+recursive-include locale *
+prune locale/*.gitkeep
+prune locale/*.DS_Store
