--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,9 @@
 [metadata]
 description-file = README.md
+
+[flake8]
+import-order-style = google
+application-import-names = lang
+exclude = .git,*migrations*,__pycache__,*.pyc
+max-line-length = 119
+ignore = E251
