--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,4 @@ import-order-style = google
 application-import-names = lang
 exclude = .git,*migrations*,__pycache__,*.pyc
 max-line-length = 119
-ignore = E251
+ignore =
