added bugbear to linter

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,5 +6,7 @@ import-order-style = google
 application-import-names = lang
 exclude = .git,*migrations*,__pycache__,*.pyc
 max-line-length = 88
+# https://github.com/PyCQA/flake8-bugbear
+select = C,E,F,W,B,B3,B9
 # W503 line break before binary operator warnings is not PEP 8 compliant, you should tell Flake8 to ignore these warnings.
-ignore = W503
+ignore = W503, E501
